# MicroReview

./: README.md  demo.py  main.py  pyproject.toml  requirements.txt  test_local.py
.github/: copilot-instructions.md
agents/: __init__.py  github_actions_security.py  hard_coded_creds.py  hard_coded_creds_dspy.py  pii_exposure.py
config/: __init__.py  example.microreview.yml  loader.py
core/: __init__.py  dspy_config.py  github_client.py  orchestrator.py  synthesizer.py
docs/: INSTALL.md  NLCP_GUIDE.md  README_COMPLIANCE.md
tests/: __init__.py  test_integration.py
